# cs4701_sp25_quoridorai

./: .gitignore  README.md  generate_fake_training_data.py  requirements.txt  runner.sh
MCTS_cpp/: CMakeLists.txt  MCTS.cpp  MCTS.hpp  MCTS.pxd  MCTS_cpp.py  game_state_tuple.cpp  game_state_tuple.hpp  main.cpp  setup.py
game_engine/: MCTS.py  game_loop.py  game_state.py  game_state_tuple.py  test_game_state.py  utility.py
model/: __init__.py  cnn.py  data_loader.py  evaluator.py  export_model.py  nn.py  nn_mcts.py  train_and_eval.py  train_nn.py  trainer.py
report/: references.bib  report.tex
second_attempt/: Adv_tactic_graphs.py  CMakeLists.txt  MCTS_data.csv  MCTS_data_evals.csv  MCTS_graphs.py  analysis.ipynb  model.py  path_resilience.py  resilience.ipynb  rules_demo.py  runner.sh  win_rate.py  win_ratio.py
second_attempt/Figure_Data/Adv_tactic/: cnn_line.csv  d_basic_eval_over_time.csv  e_forest_move_distr.csv  f_forest_eval_over_time.csv
second_attempt/Figure_Data/MCTS_Distr/: cnn_histogram.csv  cnn_line.csv  d_basic_eval_over_time.csv  e_forest_move_distr.csv  f_forest_eval_over_time.csv
second_attempt/Figure_Data/Win_rate/: basic.csv  cnn.csv  naive.csv  tree.csv
second_attempt/Figure_Data/cnn_metrics/: metrics.csv
second_attempt/include/: Constants.hpp  Gamestate.hpp  MCTS.hpp  Node.hpp  model.hpp
second_attempt/src/: Gamestate.cpp  MCTS.cpp  Node.cpp  main.cpp
third_attempt/: CMakeCache.txt  CMakeLists.txt  example-app.cpp
training_data/: self_play_data_20250501_173336.pkl  self_play_data_20250501_180949.json  self_play_data_20250510_233855.csv
